[gd_scene load_steps=13 format=3 uid="uid://dq6wlnwk0sf8r"]

[ext_resource type="Script" path="res://src/realdate/RealDate.gd" id="1_lqyw3"]
[ext_resource type="PackedScene" uid="uid://btbl15a2lxka3" path="res://src/realdate/TopicChoice.tscn" id="1_x6s22"]
[ext_resource type="Texture2D" uid="uid://xvtogj4lsibc" path="res://data/assets/date/art/transparent_black_rounded_rect_8px9patch.png" id="3_cvtb6"]
[ext_resource type="Texture2D" uid="uid://cky1p5r4keacj" path="res://data/background_lists/ana_shop_meeting/intro_2.png" id="3_ekib6"]
[ext_resource type="Texture2D" uid="uid://gansk001bmaa" path="res://data/characters/anna/anna_party/character_art/ana_hands_on_hips_angry.png" id="4_jpju5"]
[ext_resource type="PackedScene" uid="uid://c1exfswvnw0ee" path="res://src/realdate/SelectionResponse.tscn" id="4_rbodi"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="4_surd0"]
[ext_resource type="Shader" path="res://src/date/ember.gdshader" id="5_slf51"]
[ext_resource type="Texture2D" uid="uid://cpafmedr5c8lp" path="res://data/assets/realdate/bluebg.png" id="5_xrx2g"]
[ext_resource type="PackedScene" uid="uid://btqikqeqa6yqp" path="res://src/realdate/TopicToggle.tscn" id="7_2lbra"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i6ank"]
shader = ExtResource("5_slf51")
shader_parameter/glow_strength = 0.2
shader_parameter/glow_speed = 2.0
shader_parameter/noise_scale = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sb5xy"]
bg_color = Color(2.64719e-07, 0.694638, 1.15514e-06, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="RealDate" type="Node2D"]
script = ExtResource("1_lqyw3")
topicChoiceScene = ExtResource("1_x6s22")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 911.0
offset_bottom = 1174.0
texture = ExtResource("3_ekib6")
expand_mode = 1
stretch_mode = 4

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(735, 759)
scale = Vector2(0.68149, 0.68149)
texture = ExtResource("4_jpju5")

[node name="Background3" type="NinePatchRect" parent="."]
offset_left = 1.0
offset_top = 961.0
offset_right = 485.0
offset_bottom = 1144.0
texture = ExtResource("3_cvtb6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Background2" type="NinePatchRect" parent="."]
offset_left = 1.0
offset_top = 961.0
offset_right = 485.0
offset_bottom = 1144.0
texture = ExtResource("3_cvtb6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Background" type="NinePatchRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_i6ank")
offset_left = 1.0
offset_top = 104.0
offset_right = 485.0
offset_bottom = 948.0
texture = ExtResource("5_xrx2g")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
offset_left = 8.0
offset_top = 620.0
offset_right = 477.0
offset_bottom = 943.0
texture = ExtResource("3_cvtb6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
offset_left = 8.0
offset_top = 114.0
offset_right = 477.0
offset_bottom = 190.0
texture = ExtResource("3_cvtb6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
offset_left = 22.0
offset_top = 27.0
offset_right = 491.0
offset_bottom = 856.0
texture = ExtResource("3_cvtb6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="WhatTalkAbout" type="Label" parent="."]
offset_left = 18.0
offset_top = 114.0
offset_right = 266.0
offset_bottom = 190.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 23
text = "What Does She Want To
Talk About Today?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 384.0
offset_top = 117.0
offset_right = 477.0
offset_bottom = 193.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 20
text = "Topics"
horizontal_alignment = 1

[node name="TriesLeft" type="Label" parent="."]
offset_left = 384.0
offset_top = 117.0
offset_right = 477.0
offset_bottom = 186.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 40
text = "6"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ChoiceContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 17.0
offset_top = 199.0
offset_right = 470.0
offset_bottom = 614.0
theme_override_constants/h_separation = 230
theme_override_constants/v_separation = 82
columns = 2

[node name="WhatYouKnow" type="Label" parent="."]
offset_left = 1.0
offset_top = 624.0
offset_right = 485.0
offset_bottom = 653.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 23
text = "Her Preferences"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 18.0
offset_top = 658.0
offset_right = 477.0
offset_bottom = 938.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="HistoryContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 57

[node name="SelectionResponse" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="SelectionResponse2" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="SelectionResponse3" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="SelectionResponse4" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="SelectionResponse5" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="SelectionResponse6" parent="ScrollContainer/HistoryContainer" instance=ExtResource("4_rbodi")]
layout_mode = 2

[node name="Choice" type="Label" parent="."]
offset_left = 8.0
offset_top = 961.0
offset_right = 191.0
offset_bottom = 1068.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 24
text = "What are her 
#1, #2, and #3 Preferences?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TopicToggle" parent="." instance=ExtResource("7_2lbra")]
anchor_left = 0.927928
anchor_top = -0.0752688
anchor_right = 1.34685
anchor_bottom = 1.29032
offset_left = 219.0
offset_top = 969.0
offset_right = 219.0
offset_bottom = 969.0
id = 1

[node name="TopicToggle2" parent="." instance=ExtResource("7_2lbra")]
anchor_left = 0.927928
anchor_top = -0.0752688
anchor_right = 1.34685
anchor_bottom = 1.29032
offset_left = 301.0
offset_top = 969.0
offset_right = 301.0
offset_bottom = 969.0
id = 2

[node name="TopicToggle3" parent="." instance=ExtResource("7_2lbra")]
anchor_left = 1.34685
anchor_top = -0.0752688
anchor_right = 1.76577
anchor_bottom = 1.29032
offset_left = 384.0
offset_top = 969.0
offset_right = 384.0
offset_bottom = 969.0
id = 3

[node name="Submit" type="Button" parent="."]
offset_left = 27.0
offset_top = 1089.0
offset_right = 466.0
offset_bottom = 1130.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("4_surd0")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_sb5xy")
text = "Submit!"

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 608.0
offset_right = 477.0
offset_bottom = 615.0
color = Color(0.647059, 0.647059, 0.647059, 0.505882)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 199.0
offset_right = 17.0
offset_bottom = 608.0
color = Color(0.709804, 0.709804, 0.709804, 0.372549)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 468.0
offset_top = 199.0
offset_right = 477.0
offset_bottom = 608.0
color = Color(0.658824, 0.658824, 0.658824, 0.360784)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 238.0
offset_top = 199.0
offset_right = 247.0
offset_bottom = 608.0
color = Color(0.607843, 0.607843, 0.607843, 0.466667)
